syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/loop/internal/pb";

package loop;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "loop/internal/pb/contract_reader.proto";

service Keystore {
  rpc Accounts (google.protobuf.Empty) returns (AccountsReply) {}
  rpc Sign (SignRequest) returns (SignReply) {}
  rpc Decrypt (DecryptRequest) returns (DecryptReply) {}
}

message AccountsReply {
  repeated string accounts = 1;
}

message SignRequest {
  string account = 1;
  bytes data = 2;
}

message SignReply {
  bytes signedData = 1;
}

message DecryptRequest {
  string account = 1;
  bytes data = 2;
}

message DecryptReply {
  bytes decryptedData = 1;
}